Deploy static site

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roche</title>
-    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="stylesheet" href="index.f8d976b1.css" />
+    <link rel="stylesheet" href="index.af894868.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CSSPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="index.js" type="module" defer></script>
   </head>
   <body>
     <header class="header" data-aos="fade-in">
-      <p class="header-text pulse-text color-change" id="header-text">
+      <p class="color-change header-text pulse-text" id="header-text">
         В старый особняк на Коминтернской 16с1 обычно заезжали гости со всего света. Зная секретный
         код +7 999 2828222, распространявшийся через местных лавочников, каждый из них попадал в
         тайную комнату...
@@ -25,96 +28,126 @@
     </header>
     <main class="main-content">
       <section class="hero" data-aos="fade-in">
-        <h1 class="logo carousel">Roche</h1>
+        <h1 class="carousel logo">Roche</h1>
         <div class="image-container">
-          <img src="./public/logo.png" alt="Madame Roche" class="main-photo floating" />
-          <img src="./public/afterlogo.png" alt="After Logo Image" class="after-logo wiggle" />
-          <p class="photo-caption pulse-text color-change">Madame Roche</p>
+          <img src="logo.fc639acf.png" alt="Madame Roche" class="floating main-photo" />
+          <img src="afterlogo.ee1bd547.png" alt="After Logo Image" class="after-logo wiggle" />
+          <p class="color-change photo-caption pulse-text">Madame Roche</p>
         </div>
       </section>
       <section class="description" data-aos="fade-in">
         <h2 class="title">
-          <span class="word1 pulse-text color-change">The</span>
-          <span class="word2 pulse-text color-change">Guest</span>
-          <br />
-          <span class="word3 pulse-text color-change">house</span>
-          <span class="word4 pulse-text color-change">of</span>
-          <span class="word5 pulse-text color-change">the</span>
-          <br />
-          <span class="word6 pulse-text color-change">mysterious</span>
-          <br />
-          <span class="word7 pulse-text color-change">Asian</span>
-          <span class="word8 pulse-text color-change">woman</span>
-          <span class="word9 pulse-text color-change">in</span>
-          <br />
-          <span class="word10 pulse-text color-change">the</span>
-          <span class="word11 pulse-text color-change">heart</span>
-          <span class="word12 pulse-text color-change">of</span>
-          <br />
-          <span class="word13 pulse-text color-change">the</span>
-          <span class="word14 pulse-text color-change">Eurasian</span>
-          <br />
-          <span class="word15 pulse-text color-change">world</span>
+          <span class="color-change pulse-text word1">The</span>
+          <span class="color-change pulse-text word2">Guest</span> <br />
+          <span class="color-change pulse-text word3">house</span>
+          <span class="color-change pulse-text word4">of</span>
+          <span class="color-change pulse-text word5">the</span> <br />
+          <span class="color-change pulse-text word6">mysterious</span> <br />
+          <span class="color-change pulse-text word7">Asian</span>
+          <span class="color-change pulse-text word8">woman</span>
+          <span class="color-change pulse-text word9">in</span> <br />
+          <span class="color-change pulse-text word10">the</span>
+          <span class="color-change pulse-text word11">heart</span>
+          <span class="color-change pulse-text word12">of</span> <br />
+          <span class="color-change pulse-text word13">the</span>
+          <span class="color-change pulse-text word14">Eurasian</span> <br />
+          <span class="color-change pulse-text word15">world</span>
         </h2>
-
-        <article class="text animate__animated animate__fadeIn">
-          <p class="pulse-text color-change">Атмосферный бордель на Олдрич-стрит</p>
-          <p class="pulse-text color-change">был домом для мафиози, чиновников,</p>
-          <p class="pulse-text color-change">коллекционеров, богачей Гонконга и</p>
-          <p class="pulse-text color-change">гостей мегаполиса. Особняк изобиловал</p>
-          <p class="pulse-text color-change">опиумом, дурманящими напитками и</p>
-          <p class="pulse-text color-change">роскошными азиатками — лучшими в</p>
-          <p class="pulse-text color-change">городе.</p>
+        <article class="animate__animated animate__fadeIn text">
+          <p class="color-change pulse-text">Атмосферный бордель на Олдрич-стрит</p>
+          <p class="color-change pulse-text">был домом для мафиози, чиновников,</p>
+          <p class="color-change pulse-text">коллекционеров, богачей Гонконга и</p>
+          <p class="color-change pulse-text">гостей мегаполиса. Особняк изобиловал</p>
+          <p class="color-change pulse-text">опиумом, дурманящими напитками и</p>
+          <p class="color-change pulse-text">роскошными азиатками — лучшими в</p>
+          <p class="color-change pulse-text">городе.</p>
         </article>
-        <article class="text-second animate__animated animate__fadeIn">
-          <p class="pulse-text color-change">В конце пути, из-за ужесточения</p>
-          <p class="pulse-text color-change">законов, смены власти и преображения</p>
-          <p class="pulse-text color-change">социальной среды, как и многие</p>
-          <p class="pulse-text color-change">проститутки, Roche — просветлена.</p>
-          <p class="pulse-text color-change">С этого самого момента всю свою</p>
-          <p class="pulse-text color-change">энергию, открывшись знаниям и время</p>
-          <p class="pulse-text color-change">она посвятила изучению культуры</p>
-          <p class="pulse-text color-change">высокой кухни.</p>
+        <article class="animate__animated animate__fadeIn text-second">
+          <p class="color-change pulse-text">В конце пути, из-за ужесточения</p>
+          <p class="color-change pulse-text">законов, смены власти и преображения</p>
+          <p class="color-change pulse-text">социальной среды, как и многие</p>
+          <p class="color-change pulse-text">проститутки, Roche — просветлена.</p>
+          <p class="color-change pulse-text">С этого самого момента всю свою</p>
+          <p class="color-change pulse-text">энергию, открывшись знаниям и время</p>
+          <p class="color-change pulse-text">она посвятила изучению культуры</p>
+          <p class="color-change pulse-text">высокой кухни.</p>
         </article>
-
-        <div class="image-container double-images" data-aos="fade-in">
+        <div class="double-images image-container" data-aos="fade-in">
           <img
-            src="./public/first.png"
+            src="first.de6ab954.png"
             alt="Historical Image"
             class="additional-photo first-photo floating"
           />
           <img
-            src="./public/second.png"
+            src="second.3990eed2.png"
             alt="Old Book"
             class="additional-photo second-photo wiggle"
           />
         </div>
-        <article class="text-future animate__animated animate__fadeIn">
-          <p class="pulse-text color-change">Бурное прошлое наложило на её дом-</p>
-          <p class="pulse-text color-change">ресторан некоторые особенности: она</p>
-          <p class="pulse-text color-change">всегда не против как следует выпить и</p>
-          <p class="pulse-text color-change">станцевать с гостями под лучшую</p>
-          <p class="pulse-text color-change">эклектичную музыку со всего света.</p>
+        <article class="animate__animated animate__fadeIn text-future">
+          <p class="color-change pulse-text">Бурное прошлое наложило на её дом-</p>
+          <p class="color-change pulse-text">ресторан некоторые особенности: она</p>
+          <p class="color-change pulse-text">всегда не против как следует выпить и</p>
+          <p class="color-change pulse-text">станцевать с гостями под лучшую</p>
+          <p class="color-change pulse-text">эклектичную музыку со всего света.</p>
         </article>
-        <div class="image-container gallery-images" data-aos="fade-in">
-          <img src="./public/predlast.png" alt="Group of People" class="gallery-image floating" />
-          <img src="./public/last.png" alt="list" class="gallery-img wiggle" />
+        <div class="gallery-images image-container" data-aos="fade-in">
+          <img src="predlast.092de378.png" alt="Group of People" class="floating gallery-image" />
+          <img src="last.31f5e582.png" alt="list" class="gallery-img wiggle" />
         </div>
-        <article class="text-last animate__animated animate__fadeIn">
-          <p class="pulse-text color-change">Основное меню представлено актуальным и</p>
-          <p class="pulse-text color-change">авторским comfort-food, построенным на</p>
-          <p class="pulse-text color-change">захватывающих вкусовых сочетаниях</p>
-          <p class="pulse-text color-change">соусов и высококачественных овощах,</p>
-          <p class="pulse-text color-change">мясе и морепродуктах.</p>
+        <article class="animate__animated animate__fadeIn text-last">
+          <p class="color-change pulse-text">Основное меню представлено актуальным и</p>
+          <p class="color-change pulse-text">авторским comfort-food, построенным на</p>
+          <p class="color-change pulse-text">захватывающих вкусовых сочетаниях</p>
+          <p class="color-change pulse-text">соусов и высококачественных овощах,</p>
+          <p class="color-change pulse-text">мясе и морепродуктах.</p>
         </article>
       </section>
       <section class="gallery" data-aos="fade-in">
-        <h1 class="logo carousel">Roche</h1>
-        <p class="footer-text pulse-text color-change">
+        <h1 class="carousel logo">Roche</h1>
+        <p class="color-change footer-text pulse-text">
           Основное меню представлено актуальным и авторским comfort-food
         </p>
-        <p class="footer-text pulse-text color-change">Telegram WhatsApp</p>
+        <p class="color-change footer-text pulse-text">Telegram WhatsApp</p>
       </section>
     </main>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        AOS.init();
+
+        gsap.timeline({ repeat: -1 }).fromTo(
+          '.carousel',
+          { xPercent: 100 },
+          {
+            xPercent: -100,
+            duration: 13,
+            ease: 'linear',
+            delay: 0.2,
+          },
+        );
+
+        document
+          .querySelectorAll('.text p, .text-second p, .text-future p, .text-last p')
+          .forEach((item) => {
+            item.addEventListener('mouseenter', () => {
+              gsap.to(item, { x: 10, color: '#b92e2e', duration: 0.3 });
+            });
+
+            item.addEventListener('mouseleave', () => {
+              gsap.to(item, { x: 0, color: '#030302', duration: 0.3 });
+            });
+          });
+
+        document.querySelectorAll('.footer-text').forEach((item) => {
+          item.addEventListener('mouseenter', () => {
+            gsap.to(item, { scale: 1.1, color: '#b92e2e', duration: 0.3 });
+          });
+
+          item.addEventListener('mouseleave', () => {
+            gsap.to(item, { scale: 1, color: '#6b4226', duration: 0.3 });
+          });
+        });
+      });
+    </script>
   </body>
 </html>
